# gnome-documents

./: .gitignore  Makefile.am  NEWS  README  configure.ac  gnome-documents.doap
data/: Makefile.am  application.css  gnome-documents.appdata.xml.in  org.gnome.Books.appdata.xml.in  org.gnome.Books.data.gresource.xml  org.gnome.Books.desktop.in  org.gnome.Documents.appdata.xml.in  org.gnome.Documents.data.gresource.xml  org.gnome.Documents.desktop.in  org.gnome.Documents.search-provider.ini  org.gnome.books.gschema.xml  org.gnome.documents.gschema.xml  org.gnome.documents.gschema.xml.in
data/icons/: Makefile.am
data/ui/: app-menu.ui  help-overlay.ui  lokview-menu.ui  organize-collection-dialog.ui  preview-menu.ui  selection-toolbar.ui  view-menu.ui
getting-started/: Makefile.am
help/: Makefile.am
help/C/: collection-send.page.stub  collections.page  favorite.page.stub  filter.page  formats.page  index.page  info.page  location.page.stub  previews.page  print.page  prob-no-show.page  prob-previews.page  search.page  select.page  sort.page.stub  tracker.page  view-add.page  view.page  viewgrid.page
help/as/: as.po
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fi/: fi.po
help/fr/: fr.po
help/gl/: gl.po
help/gu/: gu.po
help/hi/: hi.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ja/: ja.po
help/kn/: kn.po
help/ko/: ko.po
help/lv/: lv.po
help/mr/: mr.po
help/nl/: nl.po
help/pa/: pa.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/ta/: ta.po
help/te/: te.po
help/vi/: vi.po
help/zh_CN/: zh_CN.po
man/: Makefile.am  gnome-books.xml  gnome-documents.xml
po/: LINGUAS  POTFILES.in  ar.po  as.po  be.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kk.po  kn.po  ko.po  lt.po  lv.po  mr.po  nb.po  ne.po  nl.po  (+23 more)
src/: Makefile-js.am  Makefile-lib.am  Makefile.am  application.js  changeMonitor.js  documents.js  edit.js  embed.js  error.js  errorBox.js  gDataMiner.js  gnome-books.in  gnome-documents  gnome-documents-service.in  gnome-documents.gresource.xml  loadMore.js  lokview.js  main.js  mainBooks.js  mainToolbar.js  mainWindow.js  manager.js  miners.js  notifications.js  offsetController.js  org.gnome.Books.in  org.gnome.Books.src.gresource.xml  org.gnome.Documents.service.in  org.gnome.Documents.src.gresource.xml  password.js  places.js  presentation.js  preview.js  properties.js  query.js  search.js  searchbar.js  selections.js  sharing.js  shellSearchProvider.js  (+6 more)
src/lib/: gd-display-preview.c  gd-display-preview.h  gd-nav-bar.c  gd-nav-bar.h  gd-pdf-loader.c  gd-places-bookmarks.c  gd-places-links.c  gd-utils.c  gd-utils.h
src/miner/: gd-gdata-miner.c  gd-miner.c
src/resources/: Adwaita.css  app-menu.ui
