@YELP_HELP_RULES@

HELP_ID = gnome-documents

HELP_FILES = \
	legal.xml \
	collections.page \
	filter.page \
	formats.page \
	index.page \
	info.page \
	previews.page \
	print.page \
	search.page \
	select.page \
	tracker.page \
	viewgrid.page \
	view.page

HELP_MEDIA = \
	media/go-down.png

HELP_LINGUAS =
