@YELP_HELP_RULES@

HELP_ID = gnome-documents

HELP_FILES = \
	legal.xml \
	collections.page \
	filter.page \
	formats.page \
	index.page \
	info.page \
	previews.page \
	print.page \
	search.page \
	tracker.page \
	viewgrid.page \
	view.page

HELP_MEDIA = \
	media/go-down.png \
	media/icon_gnome-documents.png

HELP_LINGUAS = as ca cs de el fi fr es gl gu hi hu id it ja kn lv mr nl pa pt_BR ru sl sr sr@latin sv te vi ta zh_CN
